# computer_vision_exercises

./: .gitignore  pyproject.toml  requirements.txt
chapter_8/exercise_1/: live_align.py  test.py
scripts/: capture.py  update_notebooks.py
utils/capture/: realsense.py
